--- a/wrangler.toml
+++ b/wrangler.toml
@@ -1,14 +1,14 @@
-name = "changli"
+name = "vpn"
 main = "build/worker/shim.mjs"
 compatibility_date = "2024-05-23"
 minify = true
 
-account_id = "05f49c4336ab8d1df4fabeeebbcdb083"
+account_id = "4eb3d56cfe239a6855b4fd4cc3351678"
 workers_dev = true
 
 [[kv_namespaces]]
-binding = "YUMI"
-id = "5067ad020c154b56966b5e6726f8bc4c"
+binding = "vpn"
+id = "2796d37a041347039866d6d1731b9113"
 
 [build]
 command = "cargo install worker-build && worker-build --release"
@@ -18,5 +18,5 @@ build = { command = "cargo install worker-build && worker-build --dev" }
 
 [vars]
 UUID = "aacac2d2-cac8-442a-9f2c-4e4f807065f5"
-MAIN_PAGE_URL = "https://raw.githubusercontent.com/Mayumiwandi/Changli/refs/heads/main/web/index.html"
+MAIN_PAGE_URL = "htps://sfa.bangjdi.eu.org"
 SUB_PAGE_URL = "https://raw.githubusercontent.com/Mayumiwandi/Changli/refs/heads/main/web/sub.html"
